@@ -1,24 +1,25 @@
-
 package ru.mephi.vikingdemo.service;
 
-import java.util.List;
-import java.util.Random;
 import net.datafaker.Faker;
 import org.springframework.stereotype.Component;
 import ru.mephi.vikingdemo.model.BeardStyle;
-import ru.mephi.vikingdemo.model.EquipmentItem;
 import ru.mephi.vikingdemo.model.HairColor;
 import ru.mephi.vikingdemo.model.Viking;
+
+import java.util.List;
 import java.util.Locale;
+import java.util.Random;
+import java.util.UUID;
 
 @Component
 public class VikingFactory {
 
-    private final Faker faker = new Faker(Locale.of("nor"));
+    private final Faker faker = new Faker(new Locale("en"));
     private final Random random = new Random();
 
     public Viking createRandomViking() {
         return new Viking(
+                UUID.randomUUID(),
                 faker.name().firstName(),
                 18 + random.nextInt(43),
                 160 + random.nextInt(41),
@@ -28,7 +29,7 @@ public class VikingFactory {
         );
     }
 
-    private List<EquipmentItem> createRandomEquipment() {
+    private List<ru.mephi.vikingdemo.model.EquipmentItem> createRandomEquipment() {
         return List.of(
                 EquipmentFactory.createItem(),
                 EquipmentFactory.createItem()
